pi-cluster/deployments/borked/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: borked
  namespace: borked
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - borked.charlieegan3.com
    secretName: borked-tls
  rules:
  - host: borked.charlieegan3.com
    http:
      paths:
      - path: /
        backend:
          serviceName: borked
          servicePort: http1
